# Open-Alexandros

./: .gitignore  AI model Idea Alexandros.md  LICENSE  README.md  Roadmap.md  pyproject.toml
.github/workflows/: ci.yml
configs/: heavy_1b.yaml  heavy_base.yaml  heavy_debug.yaml  heavy_tiny.yaml  lite_1b.yaml  lite_base.yaml  lite_debug.yaml  lite_tiny.yaml
docs/: alexandros_master_design.md  api_reference.md  architecture_contracts.md  architecture_decisions.md  checkpoint_format.md  code_benchmark_harness.md  community_training_curriculum.md  contributing.md  data_policy.md  dependency_strategy.md  distributed_moe.md  evaluation_strategy.md  hardware_targets.md  latent_trace_format.md  optimized_kernels.md  post_training_scope.md  release_checklist.md  research_matrix.md  safety_evaluation.md  serving_integration.md  test_fixtures.md  tokenizer_contract.md  training_guide.md  training_objective_contracts.md
docs/templates/: dataset_card.md  model_card.md  (+1 more)
examples/: README.md  diffusion_generation.py  inspect_bitlinear.py  minimal_model.py  save_load_roundtrip.py  tiny_ar_training.py
scripts/: _common.py  _deps.py  benchmark.py  eval.py  export_hf.py  generate.py  meta_train_ttt.py  pretrain.py  train_diffusion.py  train_latent.py
tests/: test_adaptive_depth.py  test_attention_mla.py  test_bitlinear.py  test_code_benchmarks.py  test_diffusion.py  test_distillation.py  test_generation.py  test_hf_compat.py  test_initialization.py  test_kv_cache.py  test_latent_reasoning.py  test_latent_traces.py  test_moe.py  test_recurrent_stack.py  test_smoke.py  test_ssm_gated_deltanet.py  test_ssm_mixers.py  test_trainability.py  test_ttt.py
(+37 files in other folders)
