[build-system]
requires = ["setuptools>=68,<81", "wheel>=0.42,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "open-alexandros"
version = "0.1.0"
description = "Research-grounded PyTorch prototype for the Alexandros Heavy/Lite AI model architecture."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
  { name = "Open-Alexandros Contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9", "pyyaml>=6.0,<7", "ruff>=0.5,<1"]
runtime = ["torch>=2.1,<3"]
serialization = ["safetensors>=0.4,<1"]
tracking = ["tensorboard>=2.15,<3"]
hf = ["transformers>=4.40,<5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "scripts", "tests", "examples"]
extend-exclude = ["runs", "checkpoints", "local_data"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"examples/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
